my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EAVAR/EAVAR.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAVAR.dml:8:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAVAR.dml:11:8: error EAVAR: cannot use variable index in a constant list
